--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8" />
     <title>EmployeeControl</title>
