--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root></app-root>
+    <aw-root></aw-root>
   </body>
 </html>
